# chats-playground

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
basic_chat/: cli.py  client.py  server.py
docs/: basic_chat.md  fast_chat.md  flet_chat.md  index.md
fast_chat/multi_chat/: manager.py  multi_chat.py  settings.py  test_multi.py
fast_chat/single_chat/: settings.py  single_chat.py  test_single.py
flet_chat/: chat.py
