[project]
name = "chats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "flet[all]>=0.27.6",
    "uvicorn>=0.34.2",
    "websockets==13.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.1.5",
    "mkdocstrings-python>=1.16.10",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
# Set the maximum line length to 119.
line-length = 119
exclude = ["test_*.py"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle Error
    "W", # pycodestyle Warning
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "FAST", # fastAPI
    #"S", # flake8-bandit
    "C90", # mccabe
    "ANN", # flake8-annotations
    ]
